fix image name and tag outputs... probably

--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -12,6 +12,9 @@ jobs:
   build_image:
     name: Build Image
     runs-on: ubuntu-latest
+    outputs:
+      image_name: ${{ steps.write_image_ref.image_name }}
+      image_tag: ${{ steps.write_image_ref.image_tag }}
     steps:
       - uses: actions/checkout@v3
       # Bunch of stuff to make GitVersion Work
@@ -48,19 +51,21 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{steps.gitversion.outputs.semVer}}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}
+            ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.semVer }}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}
           build-args: |
             GODOT_VERSION=${{ env.GODOT_VERSION }}
             RELEASE_NAME=${{ env.RELEASE_NAME }}
       - name: Output image tag for test project build
+        id: write_image_ref
         run: |
-          echo "image_tag=${{steps.gitversion.outputs.semVer}}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}" >> "$GITHUB_OUTPUT"
+          echo "image_name=ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}"  >> "$GITHUB_OUTPUT"
+          echo "image_tag=${{ steps.gitversion.outputs.semVer }}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}" >> "$GITHUB_OUTPUT"
   build_project_linux:
     name: Build Test Project (Linux)
     needs: build_image
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/witchpixels/godot4-omnibuilder3d:${{needs.build_image.outputs.image_tag}}
+      image: ${{ needs.build_image.outputs.image_name }}:${{ needs.build_image.outputs.image_tag }}
       env:
         EXPORT_NAME: omnibuilder_test_project
         PROJECT_PATH: test_project
@@ -85,7 +90,7 @@ jobs:
     needs: build_image
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/witchpixels/godot4-omnibuilder3d:${{needs.build_image.outputs.image_tag}}
+      image: ghcr.io/witchpixels/godot4-omnibuilder3d:${{ needs.build_image.outputs.image_tag }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
