--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -9,15 +9,16 @@ env:
   EXPORT_NAME: omnibuilder_test_project
   PROJECT_PATH: test_project
 jobs:
-  build_image:
-    name: Build Image
-    runs-on: ubuntu-latest
+  meta:
+    name: Determine build state
     outputs:
-      image_name: ${{ steps.write_image_name.image_name }}
+      image_owner: ${{ steps.write_image_owner.image_owner }}
+      image_name: ${{ env.IMAGE_NAME }}
       image_tag: ${{ steps.write_image_tag.image_tag }}
+      semVer: ${{ steps.gitversion.outputs.semVer }}
     steps:
       - uses: actions/checkout@v3
-      # Bunch of stuff to make GitVersion Work
+      # Get git version set up
       - name: Fetch all history for all tags and branches
         run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
@@ -31,7 +32,24 @@ jobs:
         id: gitversion
         with:
           useConfigFile: true
-      - run:  echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+      
+      - name: Write repo owner
+        id: write_image_owner
+        run: echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_OUTPUT
+      
+      - name: Write Image tag from Godot Version
+        run:  echo IMAGE_TAG=$(echo ${{ env.RELEASE_NAME != 'stable' && format('.{0}', env.RELEASE_NAME) || '' }}) >> $GITHUB_ENV
+
+      - name: Output image name for test project build
+        id: write_image_tag
+        run: echo "image_tag=${{ steps.gitversion.outputs.semVer }}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+
+  build_image:
+    name: Build Image
+    runs-on: ubuntu-latest
+    needs: meta
+    steps:
+      - uses: actions/checkout@v3
       - name: Login to GitHub Container Registry 
         uses: docker/login-action@v1.14.1
         with:
@@ -43,7 +61,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - run:  echo IMAGE_TAG=$(echo ${{ env.RELEASE_NAME != 'stable' && format('.{0}', env.RELEASE_NAME) || '' }}) >> $GITHUB_ENV
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.9.0
         with:
@@ -51,25 +68,20 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}:${{ steps.gitversion.outputs.semVer }}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}
+            ghcr.io/${{ needs.meta.outputs.image_owner }}/${{ needs.meta.outputs.image_name }}:${{ needs.meta.outputs.image_tag }}
           build-args: |
             GODOT_VERSION=${{ env.GODOT_VERSION }}
             RELEASE_NAME=${{ env.RELEASE_NAME }}
-      
-      - name: Output image name for test project build
-        id: write_image_name
-        run: echo "image_name=ghcr.io/${{ env.IMAGE_OWNER }}/${{ env.IMAGE_NAME }}"  >> $GITHUB_OUTPUT
-
-      - name: Output image name for test project build
-        id: write_image_tag
-        run: echo "image_tag=${{ steps.gitversion.outputs.semVer }}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}" >> $GITHUB_OUTPUT
+    
   
   build_project_linux:
     name: Build Test Project (Linux)
-    needs: build_image
+    needs: 
+      - meta
+      - build_image
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/witchpixels/godot4-omnibuilder3d:0.1.0-PullRequest0001.22-4.1.1
+      image: ghcr.io/${{ needs.meta.outputs.image_owner }}/${{ needs.meta.outputs.image_name }}
       env:
         EXPORT_NAME: omnibuilder_test_project
         PROJECT_PATH: test_project
@@ -81,9 +93,9 @@ jobs:
       - name: Linux Build
         run: |
           cd $PROJECT_PATH
-          env
+          apply_version_info.sh
           mkdir -v -p build/linux
-          godot --headless -d -v --export-release "Linux/X11" build/linux/$EXPORT_NAME.x86_64
+          godot --headless -d -v --export-release "Linux/X11" build/linux/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -92,10 +104,12 @@ jobs:
   
   build_project_windows:
     name: Build Test Project (Windows Desktop)
-    needs: build_image
+    needs: 
+      - meta
+      - build_image
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/witchpixels/godot4-omnibuilder3d:0.1.0-PullRequest0001.22-4.1.1
+      image: ghcr.io/${{ needs.meta.outputs.image_owner }}/${{ needs.meta.outputs.image_name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -104,9 +118,9 @@ jobs:
       - name: Windows Build
         run: |
           cd $PROJECT_PATH
-          env
+          apply_version_info.sh
           mkdir -v -p build/windows
-          godot --headless -v --export-release "Windows Desktop" build/windows/$EXPORT_NAME.exe
+          godot --headless -v --export-release "Windows Desktop" build/windows/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
