--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -51,6 +51,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: meta
     steps:
+      - name: Show outputed state
+        run: |
+          echo image owner: ${{ needs.meta.outputs.image_owner }}
+          echo image name:  ${{ needs.meta.outputs.image_name }}
+          echo image tag:   ${{ needs.meta.outputs.image_tag }}
+          echo semver:      ${{ needs.meta.outputs.semVer }}
+
       - uses: actions/checkout@v3
       - name: Login to GitHub Container Registry 
         uses: docker/login-action@v1.14.1
