--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -31,19 +31,19 @@ jobs:
       
       - name: Write repo owner
         id: write_image_owner
-        run: echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> "$GITHUB_OUTPUT"
+        run: echo IMAGE_OWNER=$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
       
       - name: Write Image tag from Godot Version
         run:  echo IMAGE_TAG=$(echo ${{ env.RELEASE_NAME != 'stable' && format('.{0}', env.RELEASE_NAME) || '' }}) >> $GITHUB_ENV
 
       - name: Output image name for test project build
         id: write_image_tag
-        run: echo "image_tag=${{ steps.gitversion.outputs.semVer }}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}" >> "$GITHUB_OUTPUT"
+        run: echo "FINAL_IMAGE_TAG=${{ steps.gitversion.outputs.semVer }}-${{ env.GODOT_VERSION }}${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
     
     outputs:
-      image_owner: ${{ steps.write_image_owner.image_owner }}
+      image_owner: ${{ env.IMAGE_OWNER }}
       image_name: ${{ env.IMAGE_NAME }}
-      image_tag: ${{ steps.write_image_tag.image_tag }}
+      image_tag: ${{ env.FINAL_IMAGE_TAG }}
       semVer: ${{ steps.gitversion.outputs.semVer }}
 
   build_image:
