--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -99,10 +99,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+      - name: Setup
+        run: |
+          setup.sh
       - name: Linux Build
         run: |
           cd $PROJECT_PATH
-          setup_blender_editor_path.sh
           apply_version_info.sh
           mkdir -v -p build/linux
           godot --headless -d -v --export-release "Linux/X11" build/linux/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
@@ -125,10 +127,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+      - name: Setup
+        run: |
+          setup.sh
       - name: Windows Build
         run: |
           cd $PROJECT_PATH
-          setup_blender_editor_path.sh
           apply_version_info.sh
           mkdir -v -p build/windows
           godot --headless -v --export-release "Windows Desktop" build/windows/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.exe
