run to quit first

--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -107,7 +107,8 @@ jobs:
           cd $PROJECT_PATH
           apply_version_info.sh
           mkdir -v -p build/linux
-          godot --headless -d --export-release "Linux/X11" build/linux/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
+          godot -v -e --quit --headless
+          godot --headless -v --export-release "Linux/X11" build/linux/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -135,6 +136,7 @@ jobs:
           cd $PROJECT_PATH
           apply_version_info.sh
           mkdir -v -p build/windows
+          godot -v -e --quit --headless
           godot --headless -v --export-release "Windows Desktop" build/windows/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
