--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -161,6 +161,7 @@ jobs:
           lfs: true
       - name: Setup
         run: |
+          mkdir -p /github/home/.local/share/godot/export_templates/
           cp -rv /root/.local/share/godot/templates/ /github/home/.local/share/godot/export_templates/
       - name: Prebuild
         run: |
