--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -108,7 +108,10 @@ jobs:
           mkdir -v -p build/linux
           godot -v -e --quit --headless
       - name: Linux Build
-        run: godot --headless -v --export-release "Linux/X11" build/linux/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
+        run: |
+          cd $PROJECT_PATH
+          pwd
+          godot --headless -v --export-release "Linux/X11" build/linux/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -137,7 +140,10 @@ jobs:
           mkdir -v -p build/windows
           godot -v -e --quit --headless
       - name: Windows Build
-        run: godot --headless -v --export-release "Windows Desktop" build/windows/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
+        run: |
+          cd $PROJECT_PATH
+          pwd
+          godot --headless -v --export-release "Windows Desktop" build/windows/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
@@ -170,6 +176,7 @@ jobs:
           godot -v -e --quit --headless
       - name: Linux Build
         run: |
+          cd $PROJECT_PATH
           pwd
           godot --headless -v --export-release "Linux/X11" build/linux/$EXPORT_NAME-${{ needs.meta.outputs.semVer }}.x86_64
       - name: Upload Artifact
