we get executables now at least

--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -4,7 +4,7 @@ on:
     branches: [ "main" ]
 env:
   IMAGE_NAME: godot4-omnibuilder3d
-  GODOT_VERSION: 4.1
+  GODOT_VERSION: 4.1.1
   RELEASE_NAME: stable
   EXPORT_NAME: omnibuilder_test_project
   PROJECT_PATH: test_project
@@ -156,7 +156,7 @@ jobs:
       - meta
     runs-on: ubuntu-latest
     container:
-      image: witchpixels/godot4-ci:mono-4.1
+      image: witchpixels/godot4-ci:mono-${{ env.GODOT_VERSION }}
       env:
         EXPORT_NAME: omnibuilder_test_project
         PROJECT_PATH: test_project
