--- a/.github/workflows/build_container.yml
+++ b/.github/workflows/build_container.yml
@@ -100,6 +100,8 @@ jobs:
         with:
           lfs: true
 
+      - name: Fix paths for Github
+        run: setup_github_paths.sh
 
       - name: Show environment
         run: env
@@ -144,6 +146,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           lfs: true
+
+      - name: Fix paths for Github
+        run: setup_github_paths.sh
 
       - name: Show environment
         run: env
