--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,6 +38,8 @@ jobs:
         include:
           - godot_version: 4.1.2
             release_name: stable
+          - godot_version: 4.1.3
+            release_name: stable
           - godot_version: 4.0.3
             release_name: stable
     name: Build Image
